--- a/src/components/_header.scss
+++ b/src/components/_header.scss
@@ -1,26 +1,40 @@
-.skinHeader{
-    background: transparent !important;
-    position: static;
+/** @format */
+
+.skinHeader {
+	background: transparent !important;
+	position: static;
 }
 
-.layout-mobile, .layout-desktop{
-    body{
-        display: flex;
-        flex-direction: column;
-        flex-wrap: nowrap;
-        overflow: hidden !important;
-    }
+.layout-mobile,
+.layout-desktop {
+	body {
+		display: flex;
+		flex-direction: column;
+		flex-wrap: nowrap;
+		overflow: hidden !important;
+	}
 }
 
-div[data-role=page].page {
-    position: absolute;
-    padding: 0 !important;
-    height: 100%;
-    overflow: hidden visible;
-    mask-image: linear-gradient(to top, transparent, black 1em calc(100% - 1em), transparent);
-    -webkit-mask-image: linear-gradient(to top, transparent, black 1em calc(100% - 1em), transparent);
+div[data-role="page"].page {
+	position: absolute;
+	padding: 0 !important;
+	height: calc(100% + 1.2em);
+	overflow: hidden visible;
+	mask-image: linear-gradient(
+		to top,
+		transparent,
+		black 1em calc(100% - 1em),
+		transparent
+	);
+	-webkit-mask-image: linear-gradient(
+		to top,
+		transparent,
+		black 1em calc(100% - 1em),
+		transparent
+	);
+	margin: 1.2em 0 !important;
 }
 .mainAnimatedPages.skinBody {
-    height: 100%;
-    position: relative;
+	height: 100%;
+	position: relative;
 }
